create image folder

--- a/index.html
+++ b/index.html
@@ -1,14 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <nav class="navbar">
+        <div class="logo">
+            <img src="" alt="Asia Gargen Hotel logo">
+            <span>ASIA GARDEN<br><small>HOTEL</small></span>
+        </div>
+
+            <ul class="nav-link">
+                <li><a href="#"></a>Homepage</li>
+                <li><a href="#"></a>Room</li>
+                <li><a href="#"></a>Dining</li>
+                <li><a href="#"></a>Reference</li>
+                <li><a href="#"></a>About Us</li>
+                <li><a href="#"></a>Contact Us</li>
+            </ul>
+        </div>
+        </nav>
+
+        <div class="nav booking">
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+    </header>
+
+
+
 
 
 </body>
+
 </html>
