--- a/index.html
+++ b/index.html
@@ -7,8 +7,55 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
 
 
+<footer>
+    <div class="box-footer-1">
+        <img class="logo-footer" src="./company-logo.png" alt="A picture of the logo">
+        <div class="text-footer-1">
+            <p>Asia Garden Hotel</p>
+            <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
+        </div>
+        <p>+66 (0) 2 659 9000 </p>
+        <p>mobkk-reservations@mohg.com</p>
+    </div>
+    <hr>
+    <div class="box-footer-2">
+        <div class="small-box-footer-1">
+            <div class="text-footer-2">
+                <p>Newsletter</p>
+                <p>
+                    Subscribe to our newsletter to see what's happening at 
+                    Asia Garden Hotel and to take advantage of our offers.
+                </p>
+            </div>
+            <form class="form-footer">
+                <input type="text" placeholder="email adress">
+                <input type="submit" value="Sign up">
+            </form>
+        </div>
+        <div class="small-box-footer-2">
+            <div class="links-footer">
+                <a href="">Home</a>
+                <a href="">Room</a>
+                <a href="">Restaurant</a>
+                <a href="">Reference</a>
+                <a href="">About us</a>
+                <a href="">Contact us</a>
+            </div>
+            <div class="social-media-footer">
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer">youtube</a>
+                <a href="https://www.facebook.com" target="_blank">facebook</a>
+                <a href="https://x.com" target="_blank">twitter</a>
+                <a href="https://www.instagram.com" target="_blank">instagram</a>
+                <a href="https://www.linkedin.com/" target="_blank">linkedin</a>
+            </div>
+            <div class="copyright-notice">
+                <p>Asia Garden Hotels @ 2025. All rights reserved.</p>
+            </div>
+        </div>
+
+    </div>
+</footer>
 </body>
 </html>
