add an id in input

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <form class="form-footer">
                 <input type="text" placeholder="email adress">
-                <input type="submit" value="Sign up">
+                <input type="submit" value="Sign up" id="button-footer">
             </form>
         </div>
         <div class="small-box-footer-2">
