--- a/index.html
+++ b/index.html
@@ -6,46 +6,91 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
+    <!-- Header and Navbar -->
     <header class="header">
         <nav class="navbar">
-        <div class="logo">
-            <img src="" alt="Asia Gargen Hotel logo">
-            <span>ASIA GARDEN<br><small>HOTEL</small></span>
-        </div>
+            <div class="logo">
+                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+            </div>
+            <!-- Hamburger Navbar (mobile only) -->
+            <div class="hamburger">☰</div>
 
-            <ul class="nav-link">
-                <li><a href="#"></a>Homepage</li>
-                <li><a href="#"></a>Room</li>
-                <li><a href="#"></a>Dining</li>
-                <li><a href="#"></a>Reference</li>
-                <li><a href="#"></a>About Us</li>
-                <li><a href="#"></a>Contact Us</li>
-            </ul>
-        </div>
+            <!-- Navbar links (Desktop only) -->
+            <div class="topnav-center">
+                <a class="active" href="#home">Home</a>
+                <a href="#room">Room</a>
+                <a href="#dining">Dining</a>
+                <a href="#reference">Reference</a>
+                <a href="#about us">About Us</a>
+                <a href="#contact us">Contact Us</a>
+            </div>
+
+            <div class="topnav-right">
+                <div class="search-box">
+                    <input width="20" type="text" placeholder="search">
+                </div>
+                <select class="lang-select">
+                    <option>EN</option>
+                    <option>SV</option>
+                </select>
+            </div>
         </nav>
-
-        <div class="nav booking">
-
-
-
-
+        <div class="booking-form">
+            <div class="form-input">
+                <input type="text" placeholder="Check-in">
+                <input type="text" placeholder="Check-out">
+                <input type="text" placeholder="Adults">
+                <input type="text" placeholder="Children">
+            </div>
+            <div class="navbar-btn">
+                <button class="booking-btn">Book</button>
+            </div>
         </div>
-
-
-
-
-
-
-
-        </div>
-
-
-
 
     </header>
+
+    <!-- HERO SECTION -->
+    <section class="hero">
+        <div class="hero-image">
+            <img width="593" src="img/lobby-5.png" alt="hotel lobby">
+        </div>
+
+        <div class="hero-overlay"></div>
+
+        <div class="hero-content">
+            <button class="hero-btn">Book a room</button>
+            <button class="hero-btn">Book a table</button>
+            <button class="hero-btn">Meeting & Event</button>
+        </div>
+
+    </section>
+
+    <!-- <div class="hero-image">
+            <img width="593" src="img/lobby-5.png" alt="hotel lobby">
+        </div>
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+            <button class="hero-btn">Book a room</button>
+            <button class="hero-btn">Book a table</button>
+            <button class="hero-btn">Meeting & Event</button>
+        </div> -->
+
+<section>
+
+
+    
+</section>
+
+
+
 
 
 
