added H1 and description section

--- a/Rooms.html
+++ b/Rooms.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rooms</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hotel Rooms and Suites</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    
+  <header>
+    <h1>Rooms and Suites</h1>
+  </header>
+
+  <section class="description">
+    <p>
+      Our 130 hotel rooms and suites are characterized by quality, design and comfort.
+      Enjoy the view of Nybroviken from our bright and spacious Junior Suites or Deluxe Sea View Rooms.
+      Our rooms face either the beautiful esplanade or the hotel’s peaceful courtyard.
+      Many of the rooms and suites have balconies.
+    </p>
+  </section>
+
 </body>
 </html>
