--- a/Rooms.html
+++ b/Rooms.html
@@ -20,5 +20,57 @@
     </p>
   </section>
 
+  
+<footer>
+    <div class="box-footer-1">
+        <div class="image-footer">
+            <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+        </div>
+        <div class="text-footer-1">
+            <p class="title-footer">Asia Garden Hotel</p>
+            <p>48 Oriental Avenue, Bangkok, 10500, Thailand</p>
+            <p>+66 (0) 2 659 9000 </p>
+            <p>mobkk-reservations@mohg.com</p>
+        </div>
+    </div>
+    <hr>
+    <div class="box-footer-2">
+        <div class="text-footer-2">
+            <p class="newsletter-footer">
+                Newsletter
+            </p>
+            <p class="newsletter-text-footer">
+                Subscribe to our newsletter to see what's happening at 
+                Asia Garden Hotel and to take advantage of our offers.
+            </p>
+        </div>
+        <form class="form-footer">
+            <input type="text" placeholder="email adress" id="input-footer">
+            <input type="submit" value="Sign up" id="button-footer">
+        </form>
+        <!-- <div class="small-box-footer-1"></div> -->
+    </div>
+    <hr>
+    <div class="box-footer-3">
+        <div class="links-footer">
+            <a href="">Home</a>
+            <a href="">Room</a>
+            <a href="">Restaurant</a>
+            <a href="">Reference</a>
+            <a href="">About us</a>
+            <a href="">Contact us</a>
+        </div>
+            <div class="social-media-footer">
+                <a href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"><img src="./img/youtube.png" alt=""></a>
+                <a href="https://www.facebook.com" target="_blank"><img src="./img/facebook.png" alt=""></a>
+                <a href="https://x.com" target="_blank"><img src="./img/twitter.png" alt=""></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="./img/instagram.png" alt=""></a>
+                <a href="https://www.linkedin.com/" target="_blank"><img src="./img/linkedin.png" alt=""></a>
+            </div>
+            <div class="copyright-notice">
+                <p>Asia Garden Hotels @ 2025. All rights reserved.</p>
+            </div>
+    </div>
+</footer>
 </body>
 </html>
