--- a/Rooms.html
+++ b/Rooms.html
@@ -1,26 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hotel Rooms and Suites</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Hotel Rooms and Suites</title>
+<link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+<header>
     <h1>Rooms and Suites</h1>
-  </header>
+</header>
 
-  <section class="description">
+<section class="description">
     <p>
-      Our 130 hotel rooms and suites are characterized by quality, design and comfort.
-      Enjoy the view of Nybroviken from our bright and spacious Junior Suites or Deluxe Sea View Rooms.
-      Our rooms face either the beautiful esplanade or the hotel’s peaceful courtyard.
-      Many of the rooms and suites have balconies.
+    Our 130 hotel rooms and suites are characterized by quality, design and comfort.
+    Enjoy the view of Nybroviken from our bright and spacious Junior Suites or Deluxe Sea View Rooms.
+    Our rooms face either the beautiful esplanade or the hotel’s peaceful courtyard.
+    Many of the rooms and suites have balconies.
     </p>
-  </section>
+</section>
 
-  
+<section class="Rooms">
+    <article class="room-list">
+    <h2>Standard Queen Room 
+        <br> Stockholm</h2>
+    <ul>
+        <li>1500kr - 2900kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+    <article class="room-list">
+    <h2>Standard Room  
+    <br> Stockholm</h2>
+    <ul>
+        <li> 3500kr - 5000kr</li>
+        <li> 1 double bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+    
+    <article class="room-list">
+    <h2>Superior Room  
+    <br> Stockholm</h2>
+    <ul>
+        <li> 2100kr - 3900kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+    <article class="room-list">
+    <h2>Royal Suite  
+    <br> Stockholm</h2>
+    <ul>
+        <li> 6500kr - 7800kr</li>
+        <li> 1 king bed</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+    <article class="room-list">
+    <h2>Standard 2 Single bed
+    <br> Stockholm</h2>
+    <ul>
+        <li> 1900kr - 2500kr</li>
+        <li> 2 single beds</li>
+        <li> Breakfast included</li>
+        <li> pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+    <article class="room-list">
+    <h2>Executive Suite
+    <br> Stockholm</h2>
+    <ul>
+        <li> 4500kr - 6900kr</li>
+        <li> 1 double bed</li>
+        <li> Breakfast included</li>
+        <li> No pets allowed</li>
+    </ul>
+    <button>Book</button>
+    </article>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <footer>
     <div class="box-footer-1">
         <div class="image-footer">
