added Dining.html, fixed homepages Header/Footer

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+   
 
 
 </head>
@@ -23,8 +24,8 @@
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
                 <a class="active" href="#home">Home</a>
-                <a href="#room">Room</a>
-                <a href="#dining">Dining</a>
+                <a href="Rooms.html">Room</a>
+                <a href="dining.html">Dining</a>
                 <a href="#reference">Reference</a>
                 <a href="#about us">About Us</a>
                 <a href="#contact us">Contact Us</a>
@@ -75,20 +76,9 @@
 
             </form>
         </section>
-
-        <!-- <div class="booking-form">
-            <div class="form-input">
-                <input type="text" placeholder="Check-in">
-                <input type="text" placeholder="Check-out">
-                <input type="text" placeholder="Adults">
-                <input type="text" placeholder="Children">
-            </div>
-            <div class="navbar-btn">
-                <button class="booking-btn">Book</button>
-            </div>
-        </div> -->
-
     </header>
+
+    <main>
 
     <!-- HERO SECTION -->
     <section class="hero">
@@ -122,23 +112,25 @@
         <div class="slideshow-container">
 
             <!-- Full-width images with number and caption text -->
-            <a href="about.html">
+           
+
+            <a href="rooms.html">
                 <div class="mySlides fade">
                     <div class="numbertext">1 / 6</div>
-                    <img src="img/about-hotel.png" style="width: 100%" alt="About Hotel">
-                    <div class="text">About Hotel</div>
-                </div>
-            </a>
-
-            <a href="about.html">
-                <div class="mySlides fade">
-                    <div class="numbertext">2 / 6</div>
                     <img src="img/room-suite.png" style="width:100%">
                     <div class="text">Room & Suite</div>
                 </div>
             </a>
 
-            <a href="about.html">
+             <a href="about.html">
+                <div class="mySlides fade">
+                    <div class="numbertext">2 / 6</div>
+                    <img src="img/about-hotel.png" style="width: 100%" alt="About Hotel">
+                    <div class="text">About Hotel</div>
+                </div>
+            </a>
+
+            <a href="specialoffer.html">
                 <div class="mySlides fade">
                     <div class="numbertext">3 / 6</div>
                     <img src="img/special-offer.png" style="width:100%">
@@ -146,7 +138,7 @@
                 </div>
             </a>
 
-            <a href="about.html">
+            <a href="dining.html">
                 <div class="mySlides fade">
                     <div class="numbertext">4 / 6</div>
                     <img src="img/dining.png" style="width:100%">
@@ -154,7 +146,7 @@
                 </div>
             </a>
 
-            <a href="about.html">
+            <a href="bar.html">
                 <div class="mySlides fade">
                     <div class="numbertext">5 / 6</div>
                     <img src="img/bar-drink.png" style="width:100%">
@@ -162,7 +154,7 @@
                 </div>
             </a>
 
-            <a href="about.html">
+            <a href="meeting.html">
                 <div class="mySlides fade">
                     <div class="numbertext">6 / 6</div>
                     <img src="img/meeting-event.png" style="width:100%">
@@ -214,6 +206,22 @@
         </script>
     </section>
 
+    <!-- Member Section -->
+    <section class="member-section">
+        <div class="member-image">
+            <img width="593" src="img/pool-7.png" alt="member benefits">
+        </div>
+
+        <div class="member-content">
+            <h2 class="member-title">Join our Membership Program</h2>
+            <p class="member-text">Become a member today and start enjoying exclusive benefits and rewards at Asia
+                Garden Hotel. Sign up now to unlock special offers, personalized services, and unforgettable experiences
+                tailored just for you.
+            </p>
+            <button  type="button" class="member-btn">Join Now</button>
+        </div>
+    </section>
+    </main>
 
     <!-- Footer Section -->
 
