added log-in icon in navbar/Headder

--- a/dining.html
+++ b/dining.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -29,6 +30,9 @@
             </div>
             <!-- Navbar search & language  -->
             <div class="topnav-right">
+                <div>
+                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
                 </div>
@@ -78,20 +82,24 @@
     <main>
         <!-- HERO SECTION -->
         <section class="dining-hero">
+
             <div class="dining-hero-image">
                 <img width="593" src="img/hero-dining.png" alt="dining hero image">
+                <!-- <div class="centered">Dining</div> -->
             </div>
             <div class="hero-text">
                 <h1>Dining</h1>
                 <p>
                     Experience exquisite dining at Asia Garden Hotel, where culinary excellence meets
                     breathtaking ambiance. Savor a diverse array of gourmet dishes crafted by our world-class chefs,
-                    using the freshest ingredients to tantalize your taste buds. Whether you're indulging in a romantic
+                    using the freshest ingredients to tantalize your taste buds. Whether you're indulging in a
+                    romantic
                     dinner for two or celebrating a special occasion with loved ones, our elegant restaurants and
                     attentive service ensure an unforgettable dining experience. Join us and embark on a gastronomic
                     journey that delights all your senses.
                 </p>
             </div>
+
         </section>
 
 
