add review of the hotel, restaurant and service

--- a/reference.html
+++ b/reference.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reference</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +19,37 @@
             <p class="p-customer-review">
                 Welcome! Read what our customer have to say about our products and services provides by our company. If you will also give a customer review we will be happy to read it.
             </p>
+        </div>
+    </div>
+
+    <div class="review">
+        <h2 class="h2-review">Review of our restaurant</h2>
+        <div class="big-box-review">
+            <div class="small-box-review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+            </div>
+        </div>
+    </div>
+    <div class="review">
+        <h2 class="h2-review">Review of our service</h2>
+        <div class="big-box-review">
+            <div class="small-box-review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+            </div>
+        </div>
+    </div>
+    <div class="review">
+        <h2 class="h2-review">Review of our service</h2>
+        <div class="big-box-review">
+            <div class="small-box-review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+            </div>
         </div>
     </div>
 </body>
