add contact information

--- a/reference.html
+++ b/reference.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="customer-review">
-        <div class="picture-customer-review">
-            <img src="./img/drink-1.webp" alt="A picture of a drink">
-            <img src="./img/drink-2.webp" alt="A picture of a drink">
+        <div class="image-section-customer-review">
+            <img class="image-customer-review" src="./img/drink-1.webp" alt="A picture of a drink">
+            <img class="image-customer-review" src="./img/drink-2.webp" alt="A picture of a drink">
         </div>
         <div class="customer-review-text">
             <h1 class="h1-customer-review">
@@ -21,14 +21,23 @@
             </p>
         </div>
     </div>
-
+    <div class="review">
+        <h2 class="h2-review">Review of our hotel</h2>
+        <div class="big-box-review">
+            <div class="small-box-review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+            </div>
+        </div>
+    </div>
     <div class="review">
         <h2 class="h2-review">Review of our restaurant</h2>
         <div class="big-box-review">
             <div class="small-box-review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
             </div>
         </div>
     </div>
@@ -36,19 +45,9 @@
         <h2 class="h2-review">Review of our service</h2>
         <div class="big-box-review">
             <div class="small-box-review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-            </div>
-        </div>
-    </div>
-    <div class="review">
-        <h2 class="h2-review">Review of our service</h2>
-        <div class="big-box-review">
-            <div class="small-box-review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
-                <img class="img-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
+                <img class="image-review" src="./img/custumer-review-picture.png" alt="A customer review">
             </div>
         </div>
     </div>
