add a picture of a building and a title

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
         <div>
             <h1 class="h1-contact">Contact Information</h1>
         </div>
-        <div class="image-contact">
+        <div>
             <img class="image-contact" src="./img/company-logo.png" alt="">
         </div>
         <div class="text-contact">
@@ -20,6 +20,15 @@
             <p><img src="./img/location.png" alt="A picture of a location tag"> Stockholmsgatan 1, 111 27, Stockholm, Sweden</p>
         </div>
    </div> 
+   <hr>
+   <div class="office-building">
+        <div>
+            <h2 class="h1-office-building">Our Office Building</h2>
+        </div>
+        <div>
+            <img class="image-office-building" src="./img/office-building.png" alt="A picture of a building">
+        </div>
+   </div>
    <hr>
 </body>
 </html>
