Linked pages in nav

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- Navbar links (Desktop only) -->
             <div class="topnav-center">
-                <a class="active" href="#home">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
                 <a href="#reference">Reference</a>
