--- a/Rooms.html
+++ b/Rooms.html
@@ -7,6 +7,77 @@
 <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+
+<body>
+    <!-- Header and Navbar -->
+    <header class="header">
+        <nav class="navbar">
+            <div class="logo">
+                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+            </div>
+            <!-- Hamburger Navbar (mobile only) -->
+            <div class="hamburger">☰</div>
+
+            <!-- Navbar links (Desktop only) -->
+            <div class="topnav-center">
+                <a class="active" href="index.html">Home</a>
+                <a href="Rooms.html">Room</a>
+                <a href="dining.html">Dining</a>
+                <a href="#reference">Reference</a>
+                <a href="#about us">About Us</a>
+                <a href="#contact us">Contact Us</a>
+            </div>
+            <!-- Navbar search & language  -->
+            <div class="topnav-right">
+                <div>
+                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                </div>
+                <div class="search-box">
+                    <input width="20" type="text" placeholder="search">
+                </div>
+                <select class="lang-select">
+                    <option>EN</option>
+                    <option>SV</option>
+                </select>
+            </div>
+        </nav>
+
+        <!-- Responsiv Navbar Booking Form  -->
+        <section class="booking-bar">
+            <form action="/action_page.php" class="booking-form">
+
+                <label for="checkin" class="sr-only">Check in</label>
+                <input type="text" id="checkin" placeholder="Check in" onfocus="(this.type='date')"
+                    onblur="if(!this.value)this.type='text'">
+
+                <label for="checkout" class="sr-only">Check out</label>
+                <input type="text" id="checkout" placeholder="Check out" onfocus="(this.type='date')"
+                    onblur="if(!this.value)this.type='text'">
+
+                <label for="adult" class="sr-only">Adult</label>
+                <select id="adult" name="adult">
+                    <option value="0">Adult</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+
+                <label for="children" class="sr-only">Children</label>
+                <select id="children" name="children">
+                    <option value="0">Children</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                </select>
+
+                <button type="submit" class="btn-book">Book</button>
+
+            </form>
+        </section>
+    </header>
+
 <header>
     <h1>Rooms and Suites</h1>
 </header>
