--- a/contact.html
+++ b/contact.html
@@ -30,5 +30,25 @@
         </div>
    </div>
    <hr>
+   <div class="form">
+        <h2 class="h2-contact">CONTACT US</h2>
+        <form action="">
+            <label for="firstname">First name</label><br>
+            <input type="text" id="firstname" name="firstname"><br>
+            <label for="email">Email</label><br>
+            <input type="text" id="email" name="email"><br>
+            <label for="lastname">Last name</label><br>
+            <input type="text" id="lastname" name="lastname"><br>
+            <label for="subject">Choose a subject</label><br>
+            <select name="subject" id="subject">
+                <option value="purchase">Purchase of product/service</option>
+                <option value="question">Questions about the company</option>
+                <option value="comment">Comments on website</option>
+            </select><br>
+            <label for="message">Type your message here</label><br>
+            <textarea name="message" id="message"></textarea><br>
+            <input class="submit-contact" type="submit" value="Send">
+        </form>
+   </div>
 </body>
 </html>
