--- a/contact.html
+++ b/contact.html
@@ -32,7 +32,7 @@
    <hr>
    <div class="form">
         <h2 class="h2-contact">CONTACT US</h2>
-        <form action="">
+        <form>
             <label for="firstname">First name</label><br>
             <input type="text" id="firstname" name="firstname"><br>
             <label for="email">Email</label><br>
