linked reference and contact site in navigation bar

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <a class="active" href="index.html">Home</a>
                 <a href="Rooms.html">Room</a>
                 <a href="dining.html">Dining</a>
-                <a href="#reference">Reference</a>
+                <a href="reference.html">Reference</a>
                 <a href="#about us">About Us</a>
-                <a href="#contact us">Contact Us</a>
+                <a href="contact.html">Contact Us</a>
             </div>
             <!-- Navbar search & language  -->
             <div class="topnav-right">
