Updated_variables name file, added pictures, updated index and dining pages

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav class="navbar">
             <div class="logo">
-                <img src="img/company-logo.png" width="100" alt="Asia Gargen Hotel logo">
+                <img src="img/asia-garden-5.png" width="100" alt="Asia Gargen Hotel logo">
             </div>
             <!-- Hamburger Navbar (mobile only) -->
             <div class="hamburger">☰</div>
@@ -34,7 +34,7 @@
             <!-- Navbar search & language  -->
             <div class="topnav-right">
                 <div>
-                    <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+                    <a href="#"><i class="fa fa-fw fa-user"></i></a>
                 </div>
                 <div class="search-box">
                     <input width="20" type="text" placeholder="search">
@@ -232,7 +232,7 @@
     <footer>
         <div class="box-footer-1">
             <div class="image-footer">
-                <img class="logo-footer" src="./img/company-logo.png" alt="A picture of the logo">
+                <img class="logo-footer" src="./img/asia-garden-5.png" alt="A picture of the logo">
             </div>
             <div class="text-footer-1">
                 <p class="title-footer">Asia Garden Hotel</p>
